feat(order): fix api orderApi
